      saving, and before scanning an externally changed file, in order to avoid reading an
      unfinished file.
    - Added support for dragging a file link from the file column to another application.
    - Added toolbar button and shortcut (Alt-F) in entry editor for autosetting file links.
    - Improved ISI import filter so DOI information is included.
    - Fixed bug: metadata changes would not be detected as external changes to a database.
    - Fixed bug: when accepting external changes and not saving before new changes are
      detected, the previously accepted changes would also be listed.
    - Fixed bug in Scifinder import where an empty Inventor field could overwrite the
      author field.
    - Fixed bug in autocompleter. Current suggested completion would be added to the field
      if the user closed the entry editor or mouse clicked on another field.
    - Fixed problem with exporting to some MySql versions. Patch by François Dorin. 
    - Fixed bug in handling of LaTeX character sequences - now sequences with = as command
      character (e.g. "\={A}") are recognized.
    - Fixed bug: gray out / hide setting in groups panel is overridden on startup
      by search mode selection. Added separate prefs key for the groups setting.
      Fix suggested by Igor L. Chernyavsky.
    - Fixed bug: cookie manager installed by Download button in file field editor throws
      an exception when trying to fetch from Medline.
    - Fixed bug: temporary files don't get deleted on shutdown.
    - Disabled table column reordering in import inspection window, since a user reported
      problems when using this.
    - Changed years from 2008 to 2009 in splash image.
2.5
    - Modified export layout procedure so missing formatters can be reported in the error
      output. Export now succeeds with warnings added where formatters are missing.
    - Conditional blocks (\begin{field}...\end{field}) in layout files can now be given a